# dullsearch

./: .gitignore  CMakeLists.txt  README.md  main.cpp
.github/workflows/: c-cpp.yml  test-on-ubuntu-18.04.yml  test-tinylex.yml
dullsearch/: CMakeLists.txt  dullsearch.cpp
example/: CMakeLists.txt  example.cpp  main.cpp
filer/: CMakeLists.txt
filer/include/tinylexer/: filer.hpp
filer/include/tinylexer/filer/: read_file.hpp  utilities.hpp
filer/src/: list_dir.cpp  utilities.cpp
lexer/: CMakeLists.txt
lexer/include/tinylexer/: lexer.hpp
lexer/include/tinylexer/lexer/: lexer.hpp  symbol.hpp  utilities.hpp
lexer/src/: lexer.cpp  symbol.cpp  utilities.cpp
libengine/: CMakeLists.txt
libengine/include/: dullsearch.hpp  tinylexer.hpp
libengine/include/dullsearch/: filer.hpp  lexer.hpp  table.hpp
libengine/include/dullsearch/filer/: directories.hpp  file.hpp  read_csv.hpp  utilities.hpp
libengine/include/dullsearch/lexer/: lexer.hpp  symbol.hpp  utilities.hpp
libengine/include/dullsearch/table/: document_table.hpp  utilities.hpp  word_id_table.hpp
libengine/include/dullsearch/table/impl/: utilities_impl.hpp
libengine/include/tinylexer/: table.hpp
libengine/include/tinylexer/filer/: file.hpp  read_csv.hpp  utilities.hpp
libengine/include/tinylexer/lexer/: lexer.hpp
libengine/include/tinylexer/table/: document_id_table.hpp  document_table.hpp  utilities.hpp  word_id_table.hpp
libengine/src/filer/: directories.cpp  file.cpp  read_csv.cpp  utilities.cpp
libengine/src/lexer/: lexer.cpp  symbol.cpp  utilities.cpp
libengine/src/table/: document_id_table.cpp  document_table.cpp  utilities.cpp  word_id_table.cpp
libtinylexer/include/tinylexer/filer/: directories.hpp  utilities.hpp
libtinylexer/include/tinylexer/table/: document_id_table.hpp
libtinylexer/src/table/: document_id_table.cpp
test/: CMakeLists.txt  main.cpp
test_code/: CMakeLists.txt  main.cpp
tinylexer/: CMakeLists.txt  tinylex.cpp
tinylexer/include/: tinylexer.hpp
tinylexer/include/tinylexer/: filer.hpp  lexer.hpp  symbol.hpp  table.hpp
tinylexer/include/tinylexer/filer/: directories.hpp  list_dir.hpp  utilities.hpp
tinylexer/include/tinylexer/lexer/: lexer.hpp
tinylexer/include/tinylexer/table/: word_id_table.hpp
tinylexer/include/tinylexer/wordid/: table.hpp  utilities.hpp
tinylexer/src/: lexer.cpp  symbol.cpp  utilities.cpp
tinylexer/src/filer/: directories.cpp  list_dir.cpp  read_csv.cpp  read_file.cpp  utilities.cpp
tinylexer/src/lexer/: lexer.cpp  utilities.cpp
tinylexer/src/table/: word_id_table.cpp
tinylexer/src/wordid/: table.cpp  utilities.cpp
wordid/: CMakeLists.txt
wordid/include/tinylexer/: wordid.hpp
wordid/include/tinylexer/wordid/: table.hpp  utilities.hpp
wordid/include/tinylexer/wordid/impl/: utilities_impl.hpp
wordid/include/wordid/: container.hpp  table.hpp  utilities.hpp
wordid/src/: container.cpp  table.cpp  utilities.cpp
